# umap-clustering-mise-en-prod

./: .gitignore  LICENSE  Makefile  README.md  REVIEW.md  code_review_gilles_fevry.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: api_image.yml  linters.yaml  streamlit.yml  tests.yaml
app/: api.py
app/api/: Dockerfile  api.py  run.sh
app/api/modules/: api_utils.py
app/streamlit/: Dockerfile  run.sh  website.py  website_utils.py
app/streamlit/modules/: exploration.py  transform.py
app/streamlit/utils/: data_preprocessing.py  embeddings.py  hyperparameters.py  visualization.py
config/: main.yaml
config/dev/: dim_reduction.yaml
config/mlflow/: default.yaml
config/umap/: dev.yaml  prod.yaml
docs/: API.md  CICD.md  CONTRIBUTING.md  MONITORING.md  Streamlit.md  UMAP.md
src/: __main__.py
src/adapter/: dataset.py  mlflow_tracker.py  monitoring.py
src/application/: dim_reduction.py
src/scripts/: dim_reduction.py
src/settings/: config_loader.py
src/umap_algo/: knn.py  nn_descent.py  umap_class.py
src/umap_comparisons/: comp_perf.py  dowstream_clustering.py  forest_custom_umap.py  intrinsic_measures.py  test_custom_umap_forest.py  visuals.py
src/umapverse.egg-info/: SOURCES.txt
src/umapverse/umap_algo/: knn.py
tests/: conftest.py  iris_to_csv.py  test_api.py  test_api_global.sh  test_api_local.sh  test_knn.py  test_mlflow_tracker.py  test_mlflow_tracking.py  test_umap_class.py
