[project]
name = "umap_pck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpathlib>=0.23.0",
    "matplotlib==3.10.8",
    "mlflow>=3.10.1",
    "numpy==2.3.5",
    "omegaconf>=2.3.0",
    "pandas==2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.8.0",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "umap-learn==0.5.9.post2",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 120
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["umap_pck"]




