[project]
name = "umap_pck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "hydra-core>=1.3.2",
    "matplotlib==3.10.8",
    "mlflow>=3.10.1",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "python-multipart>=0.0.22",
    "s3fs>=2026.3.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "streamlit>=1.56.0",
    "umap-learn==0.5.9.post2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "pytest>=9.0.2",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = [
    "X_train", "Y_train", "X_train_", "Y_train_", "X_new", "Y_new", "Y_init", "X", "Y",
    "V", "K", "N", "B", "R", "H", "B_bar", "D", "L"
]
[tool.pylint.design]
max-args = 8
max-positional-arguments = 8

[tool.ruff]
line-length = 120
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
pythonpath = ["src", "app"]
